# Stanse

./: .dockerignore  .env  .env.example  .firebaserc  .gcloudignore  .gitignore  .npmrc  App.tsx  Dockerfile  PRODUCT_INTRODUCTION.md  README.md  cloudbuild.yaml  database.rules.json  firebase.json  firestore.indexes.json  firestore.rules  index.html  index.tsx  metadata.json  nginx.conf  package-lock.json  package-lock.json.backup  package.json  requirements.txt  test-enhanced-rankings.html  test-typescript-rankings.html  tsconfig.json  types.ts  vite.config.ts
backend/polis-protocol/: .gcloudignore  .gitignore  Cargo.toml  Dockerfile  cloudbuild.yaml  setup.sh  test-api.sh
backend/polis-protocol/scripts/: load_test.sh  load_test.sh.bak
backend/polis-protocol/src/: api_server.rs  blockchain.rs  crypto.rs  demo_data.rs  fec.rs  lib.rs  main.rs  metrics.rs  p2p.rs  types.rs
components/: ChinaNewsBroadcast.tsx
contexts/: AppStateContext.tsx  AuthContext.tsx  LanguageContext.tsx
data/: sp500Companies.py  sp500Companies.ts  sp500Data.json  tourSteps.ts
documentation/: 00_documentation_index.md  README.md
functions/: check-user.js  package-lock.json  package.json  verify-review.js
public/: manifest.json
scripts/: check-demographics.ts  check-news.ts  check-subscription.ts  check-user-structure.ts  check-user-sub.ts  check_online_users.sh  cleanup-failed-promo-sub.ts  deploy-firebase.sh  deploy_firestore_rules.py  diagnose_users.sh  fix-billing-logic.ts  fix-missing-billing-record.ts  fix-old-promo-user.ts  fix-promo-user-data.ts  fix-wrong-renewal.ts  generate-union-report.sh  restore-trial-field.ts  test-breaking-news-notification.ts  test-collection-linking.ts  test-rss-fetcher.ts  test-rss-quick.mjs
services/: activeFrontsService.ts  authService.ts  breakingNewsService.ts  campaignPersonalizationService.ts  chatHistoryService.ts  chinaNewsBroadcastService.ts  chinaNewsService.ts  companyRankingCache.ts  companyRankingService.ts  duelAgentService.ts  duelFirebaseService.ts  duelRealtimeService.ts  duelService.ts  enhancedCompanyRankingService.ts  fecService.ts  firebase.ts  geminiService.ts  globeService.ts  locationService.ts  marketAnalysisCacheService.ts  marketAnalysisService.ts  matchRecoveryService.ts  matchStateService.ts  newsCache.ts  notificationService.ts  offlineActivityProposalService.ts  personaAwareScoring.ts  personaScoringConfig.ts  polisApi.ts  polisService.ts  presenceService.ts  subscriptionService.ts  translationService.ts  userActionService.ts  userPersonaService.ts  userService.ts
styles/: globals.css
tests/: admin-check-online-users.html  generate-icon.html  populate-duel-questions.html  portfolio-chart.html  portfolio-chart.tsx  test-news-cache.html  test-typescript-rankings.html
translations/: onboarding.ts
utils/: createTestBroadcast.ts  debugMultiLanguageNews.ts  generateRealBroadcast.ts  globeTestUtils.ts  monitorRSS.ts  populateActiveFronts.ts  queryChinaNews.ts  testChinaNewsBroadcast.ts  testCollectionLinking.ts  testEmberAPI.ts  testLanguageSwitch.ts
(+473 files in other folders)
