[package]
name = "polis-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Stanse Team"]
description = "Decentralized Politics Protocol - The Agora System"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"

# Zero-Knowledge Proofs (placeholder for full ZK implementation)
# bellman = "0.14"  # For zk-SNARKs
# ark-bls12-381 = "0.4"  # For BLS signatures

# Networking (P2P)
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
libp2p = { version = "0.53", features = ["tcp", "mdns", "gossipsub", "kad", "identify", "noise", "yamux", "tokio", "macros"] }
futures = "0.3"

# Monitoring and Metrics
prometheus = "0.13"
lazy_static = "1.4"
hex = "0.4"

# Database (for local state)
sled = "0.34"

# Time
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP Server (for RPC interface)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"

# Patch dependencies to avoid edition2024 requirement
[patch.crates-io]
base64ct = "=1.6.0"  # Lock to older version that doesn't require edition2024

[profile.release]
opt-level = 3
lto = true
codegen-units = 1